--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h1>greene.CODE</h1>
                     <h4>Organic Tech Solutions</h4>
                     <br><br><br>
-                    <a href="#about" class="btn btn-large grey lighten-4">Learn More</a>
+                    <a href="#about" class="btn btn-large grey lighten-4" style="padding: 20px;">Learn More</a>
                 </div>
             </div>
         </div>
