--- a/index.html
+++ b/index.html
@@ -189,15 +189,19 @@
     <div class="container">
         <h2>What We Do</h2>
         <div class="row">
-            <div class="col s12 xl6">
+            <div class="col s12">
                 <div class="card black-text z-depth-4">
                     <div class="card-content">
                         <span class="card-title center">Technical</span><hr>
                         <ul class="center">
-                            <li class="center">Computer Repair</li>
-                            <li class="center">Configuration</li>
-                            <li class="center">Office Solutions</li>
-                            <li class="center">Power Systems</li>
+                            <li class="center">
+                                <i class="material-icons medium">devices</i>
+                                <p>PC Repair &#8226 Laptop Repair &#8226 Power Systems</p>
+                            </li>
+                            <li class="center">
+                                <i class="material-icons medium">settings</i>
+                                <p>PC Configuration &#8226 Software Upgrades &#8226 Printer Setup</p>
+                            </li>
                         </ul>
                         <div class="card-action">
                             <a href="#contact" class="btn green accent-4">More</a>
@@ -205,15 +209,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 xl6">
+            <div class="col s12">
                 <div class="card black-text z-depth-4">
                     <div class="card-content">
                         <span class="card-title center">Networking</span><hr>
                         <ul class="center">
-                            <li class="center">Configuration</li>
-                            <li class="center">Wireless Networks</li>
-                            <li class="center">Traffic Monitoring</li>
-                            <li class="center">Troubleshooting</li>
+                            <li class="center">
+                                <i class="material-icons medium">wifi</i>
+                                <p>Router Configuration &#8226 Network Management</p>
+                            </li>
+                            <li class="center">
+                                <i class="material-icons medium">settings_input_antenna</i>
+                                <p>Long-Range Wireless &#8226 Office Solutions</p>
+                            </li>
                         </ul>
                         <div class="card-action">
                             <a href="#contact" class="btn green accent-4">More</a>
@@ -221,15 +229,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 xl6">
+            <div class="col s12">
                 <div class="card black-text z-depth-4">
                     <div class="card-content">
                         <span class="card-title center">Security</span><hr>
                         <ul class="center">
-                            <li class="center">C.C.T.V. Systems</li>
-                            <li class="center">Firewalls</li>
-                            <li class="center">Encryption</li>
-                            <li class="center">Analytics</li>
+                            <li class="center">
+                                <i class="material-icons medium">fingerprint</i>
+                                <p>Access Control &#8226 Digital Forensics &#8226 CCTV &#8226 Encryption</p>
+                            </li>
+                            <li class="center">
+                                <i class="material-icons medium">security</i>
+                                <p>Firewalls &#8226 Network Monitoring</p>
+                            </li>
                         </ul>
                         <div class="card-action">
                             <a href="#contact" class="btn green accent-4">More</a>
@@ -237,15 +249,23 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 xl6">
+            <div class="col s12">
                 <div class="card black-text z-depth-4">
                     <div class="card-content">
                         <span class="card-title center">Development</span><hr>
                         <ul class="center">
-                            <li class="center">Web Pages</li>
-                            <li class="center">Responive Design</li>
-                            <li class="center">Digital CV's</li>
-                            <li class="center">SEO</li>
+                            <li class="center">
+                                <i class="material-icons medium">code</i>
+                                <p>Web Pages &#8226 Digital C.V's</p>
+                            </li>
+                            <li class="center">
+                                <i class="material-icons medium">show_chart</i>
+                                <p>S.E.O</p>
+                            </li>
+                            <li class="center">
+                                <i class="material-icons medium">devices_other</i>
+                                <p>Responsive Design</p>
+                            </li>
                         </ul>
                         <div class="card-action">
                             <a href="#contact" class="btn green accent-4">More</a>
