--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <ul class="center">
                             <li class="center">
                                 <i class="material-icons medium">devices</i>
-                                <p>PC Repair &#8226 Laptop Repair &#8226 Power Systems</p>
+                                <p>PC Repair &#8226 Laptop Repair &#8226 Power Systems</p><br>
                             </li>
                             <li class="center">
                                 <i class="material-icons medium">settings</i>
@@ -216,7 +216,7 @@
                         <ul class="center">
                             <li class="center">
                                 <i class="material-icons medium">wifi</i>
-                                <p>Router Configuration &#8226 Network Management</p>
+                                <p>Router Configuration &#8226 Network Management</p><br> 
                             </li>
                             <li class="center">
                                 <i class="material-icons medium">settings_input_antenna</i>
@@ -236,7 +236,7 @@
                         <ul class="center">
                             <li class="center">
                                 <i class="material-icons medium">fingerprint</i>
-                                <p>Access Control &#8226 Digital Forensics &#8226 CCTV &#8226 Encryption</p>
+                                <p>Access Control &#8226 Digital Forensics &#8226 CCTV &#8226 Encryption</p><br>
                             </li>
                             <li class="center">
                                 <i class="material-icons medium">security</i>
@@ -256,11 +256,11 @@
                         <ul class="center">
                             <li class="center">
                                 <i class="material-icons medium">code</i>
-                                <p>Web Pages &#8226 Digital C.V's</p>
+                                <p>Web Pages &#8226 Digital C.V's</p><br>
                             </li>
                             <li class="center">
                                 <i class="material-icons medium">show_chart</i>
-                                <p>S.E.O</p>
+                                <p>S.E.O</p><br>
                             </li>
                             <li class="center">
                                 <i class="material-icons medium">devices_other</i>
